build: force update and versioning for cache busting v1.5.2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
 
     <meta charset="utf-8">
-    <title>KINOV 로또 명당 지도</title>
+    <title>v1.5.2 🎰 KINOV 로또 명당 지도</title>
     <!-- Library for QR Code Scanning -->
     <script src="https://unpkg.com/html5-qrcode"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -3384,6 +3384,7 @@
                     };
                     map = new kakao.maps.Map(mapContainer, mapOptions);
                     console.log("[Init] Map object created.");
+                    console.log("KINOV Lotto Map v1.5.2-gpsfix (2026-02-21)");
 
                     // Close InfoWindow when clicking on map background
                     // Close InfoWindow & Toasts when clicking on map background
