redesign: Step4 highlight badge - red/pink gradient + white text, flex column layout, no clipping

--- a/index.html
+++ b/index.html
@@ -6062,19 +6062,31 @@
                             <div class="cumulative-status" id="regCumulativeStatus">
                                 현재까지 확정된 번호: <span id="regFixedNumsList"></span>
                             </div>
-                            <div class="battle-theme-text"
-                                style="font-size:18px; margin: 20px 0; color: #1e293b; letter-spacing: -0.5px; white-space: nowrap;">
-                                <span
-                                    style="color: #7c3aed; font-weight: 800; font-size: 15px; vertical-align: middle;">과거의
-                                    영광(회귀분석)</span>
-                                <div
-                                    style="display: inline-block; position: relative; padding: 7px 20px; background: linear-gradient(135deg, #ffe600, #ff9900); border-radius: 50px; box-shadow: 0 0 18px rgba(255, 180, 0, 0.7), 0 0 36px rgba(255, 120, 0, 0.35), inset 0 2px 3px rgba(255, 255, 255, 0.6); border: 2px solid #ff8c00; margin: 0 5px; vertical-align: middle; animation: badgePulse 1.6s ease-in-out infinite;">
-                                    <span
-                                        style="color: #3b0764; font-weight: 900; font-size: 18px; letter-spacing: 0.3px; text-shadow: 0 1px 0 rgba(255,255,255,0.4);">'7
-                                        / 15 / 52주 중에서 1개만'</span>
+                            <div
+                                style="margin: 18px 0 10px; display: flex; flex-direction: column; align-items: center; gap: 10px; text-align: center;">
+                                <div style="font-size: 14px; font-weight: 800; color: #7c3aed; letter-spacing: -0.2px;">
+                                    과거의 영광(회귀분석) — 아래 중 <em style="font-style:normal; color:#c084fc;">1개만</em> 고르세요!!
                                 </div>
-                                <span
-                                    style="color: #7c3aed; font-weight: 900; font-size: 16px; vertical-align: middle;">고르세요!!</span>
+                                <div style="
+                                    display: inline-flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    padding: 11px 28px;
+                                    background: linear-gradient(90deg, #ff416c, #ff4b2b);
+                                    border-radius: 999px;
+                                    box-shadow: 0 0 22px rgba(255,65,108,0.6), 0 0 44px rgba(255,75,43,0.3), inset 0 2px 5px rgba(255,255,255,0.3);
+                                    border: 2px solid rgba(255,255,255,0.5);
+                                    animation: badgePulse 1.6s ease-in-out infinite;
+                                ">
+                                    <span style="
+                                        color: #ffffff;
+                                        font-weight: 900;
+                                        font-size: 19px;
+                                        letter-spacing: 2px;
+                                        text-shadow: 0 2px 10px rgba(0,0,0,0.45);
+                                        white-space: nowrap;
+                                    ">7주 &nbsp;/&nbsp; 15주 &nbsp;/&nbsp; 52주</span>
+                                </div>
                             </div>
 
                             <div class="regression-layout" style="flex-direction: column; gap: 20px;">
